--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 
-:root {
+:root,
+:root[data-theme="dark"] {
   --primary-color: #f0f0f0;
 
   --primary-bg-color: #111217;
@@ -11,6 +12,23 @@
   --text-color: #9a9a9c;
   --link-color: #9a9a9c;
   --icon-color: #c7c8c9;
+}
+
+:root[data-theme="light"] {
+  --primary-color: #0b0b0f;
+
+  --primary-bg-color: #e9e9e9;
+  --second-bg-color: #c7c8c9;
+  --border-color: #c7c8c9;
+
+  --title-color: #0b0b0f;
+  --text-color: #28292e;
+  --link-color: #28292e;
+  --icon-color: #56575a;
+}
+
+html[data-theme="light"] .brand__logo {
+  filter: invert(1);
 }
 
 * {
@@ -24,10 +42,17 @@
 body {
   background-color: var(--primary-bg-color);
   font-family: "Inter", Tahoma, Geneva, Verdana, sans-serif;
+  color: var(--text-color);
 }
 
 a {
   text-decoration: none;
+  color: var(--text-color);
+}
+
+a:hover {
+  color: var(--primary-color);
+  font-weight: 600;
 }
 
 i {
@@ -43,6 +68,11 @@ i {
   padding: 0.5rem 1rem;
 }
 
+.header__toggle {
+  display: flex;
+  justify-content: flex-end;
+}
+
 .header__brand .brand__logo {
   width: 3.25rem;
   height: 3.25rem;
@@ -51,6 +81,8 @@ i {
 #toggleTheme {
   font-size: 1.5rem;
   color: var(--primary-color);
+  cursor: pointer;
+  transition: ease-in-out 0.4s;
 }
 
 .menu {
@@ -81,7 +113,9 @@ i {
 }
 
 .menu__link.active .menu__icon,
-.menu__link.active .menu__text {
+.menu__link.active .menu__text,
+.menu__link:hover .menu__icon,
+.menu__link:hover .menu__text {
   color: var(--primary-color);
   font-weight: 600;
 }
@@ -100,8 +134,37 @@ i {
   text-transform: uppercase;
 }
 
+.header__nav {
+  display: none;
+}
+
+.menu--principal {
+  gap: 1rem;
+}
+
 @media (min-width: 768px) {
-  .menu--mobile {
+  .header {
+    position: fixed;
+    border-bottom: 1px solid var(--border-color);
+    padding: 1rem 6rem;
+    background: var(--primary-bg-color);
+  }
+  .nav--mobile {
     display: none;
+  }
+
+  .header__nav {
+    display: flex;
+  }
+
+  .header__nav,
+  .header__toggle {
+    min-width: 30%;
+  }
+}
+
+@media (min-width: 1400px) {
+  .header {
+    padding: 1rem 15rem;
   }
 }
