--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -22,7 +22,7 @@
   --primary-bg-color: #e9e9e9;
   --secondary-bg-color: #c7c8c9;
   --primary-border-color: #c7c8c9;
-  --secundary-border-color: #c7c8c9;
+  --secundary-border-color: #9a9a9c;
 
   --title-color: #0b0b0f;
   --text-color: #28292e;
@@ -32,6 +32,10 @@
 
 html[data-theme="light"] .brand__logo {
   filter: invert(1);
+}
+
+html[data-theme="light"] .technologies__list {
+  filter: invert(80%);
 }
 
 * {
@@ -69,6 +73,12 @@ b {
 h1 {
   font-size: 2.5rem;
   font-weight: 200;
+}
+
+h2 {
+  font-size: 2rem;
+  text-align: center;
+  margin-bottom: 2rem;
 }
 
 h1,
@@ -180,9 +190,11 @@ p {
   width: 100%;
   background: transparent;
   border-radius: 3.125rem;
+  border: none;
   padding: 0.875rem 1.5rem;
   transition: ease-in-out 0.3s;
   cursor: pointer;
+  color: var(--primary-color);
 }
 
 .btn:hover {
@@ -204,11 +216,15 @@ p {
   border: 1px solid var(--primary-color);
 }
 
+main,
+.projects {
+  padding: 2.5rem 1rem;
+}
+
 main {
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  padding: 2.5rem 1rem;
 }
 
 .main__content1 {
@@ -222,30 +238,29 @@ main {
   aspect-ratio: 16/9;
 }
 
-.skills {
+.technologies {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
   gap: 1.25rem;
-  padding: 6.2rem 1rem 2rem 1rem;
+  padding: 6.2rem 1rem 2rem;
   background: var(--secondary-bg-color);
   margin-top: -5.5rem;
 }
 
-.skills h2 {
+.technologies h2 {
   font-size: 2rem;
   text-transform: none;
 }
 
-.skills__list {
+.technologies__list {
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-between;
   gap: 0.5rem;
 }
 
-.skills_item {
+.technologies_item {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -257,8 +272,70 @@ main {
   border-radius: 50rem;
 }
 
-.skills__logo {
+.technologies__logo {
   height: 2.4rem;
+}
+
+.projects {
+  display: flex;
+  flex-direction: column;
+}
+
+.projects__container {
+  display: flex;
+  flex-direction: column;
+  gap: 4rem;
+}
+
+.projects__card {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.card__cover {
+  width: 100%;
+  border-radius: 0.5rem;
+  object-fit: cover;
+  object-position: center;
+}
+
+.card__body {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-start;
+  gap: 1rem;
+}
+
+.card__title {
+  font-size: 1.5rem;
+}
+
+.card__description {
+  font-size: 1rem;
+  color: var(--title-color);
+}
+
+.card__list {
+  margin-left: 1rem;
+}
+
+.card__item {
+  list-style: disc;
+}
+
+.card__buttons {
+  display: flex;
+}
+
+.card__body .technologies_item {
+  width: 4rem;
+  height: 4rem;
+}
+
+.card__body .technologies__logo {
+  height: 2rem;
 }
 
 footer {
@@ -295,7 +372,13 @@ footer p {
     font-size: 4rem;
   }
 
-  main {
+  h2 {
+    font-size: 3rem;
+    letter-spacing: 0.4rem;
+  }
+
+  main,
+  .projects {
     padding: 8rem 6rem 4rem 6rem;
   }
 
@@ -305,7 +388,7 @@ footer p {
     align-items: flex-start;
   }
 
-  .skills {
+  .technologies {
     padding: 6.2rem 6rem 2rem 6rem;
     margin-top: -6rem;
   }
@@ -315,7 +398,26 @@ footer p {
   }
 }
 
+@media (min-width: 992px) {
+  .projects__card {
+    flex-direction: row;
+  }
+
+  .projects__card.card--reverse {
+    flex-direction: row-reverse;
+    justify-content: space-between;
+  }
+
+  .card__cover {
+    width: 55%;
+  }
+}
+
 @media (min-width: 1200px) {
+  h2 {
+    font-size: 4rem;
+  }
+
   .main {
     padding: 12rem 6rem 2rem;
   }
@@ -323,34 +425,59 @@ footer p {
     width: auto;
   }
 
-  .skills {
+  .technologies {
     flex-direction: row;
     justify-content: space-between;
     padding: 10rem 6rem 4rem;
   }
 
-  .skills h2 {
+  .technologies h2 {
     font-size: 3.5rem;
     width: 60%;
   }
 
-  .skills__list {
+  .technologies__list {
     gap: 1rem;
   }
 
-  .skills_item {
+  .technologies_item {
     width: 6rem;
     height: 6rem;
   }
 
-  .skills__logo {
+  .technologies__logo {
     height: 3rem;
+  }
+
+  .projects__card {
+    flex-direction: row;
+  }
+
+  .card__cover {
+    width: 50%;
+  }
+
+  .card__title {
+    font-size: 3.25rem;
+  }
+
+  .card__description,
+  .card__item {
+    font-size: 1.25rem;
+  }
+
+  .card__buttons .btn {
+    width: auto;
   }
 }
 
 @media (min-width: 1400px) {
   h1 {
     font-size: 6.25rem;
+  }
+
+  h2 {
+    font-size: 5rem;
   }
 
   p {
@@ -365,7 +492,7 @@ footer p {
     padding: 12rem 15rem 2rem;
   }
 
-  .skills {
+  .technologies {
     padding: 10rem 15rem 4rem;
   }
 }
